Some modifications, mainly to TapiPhotonicMedia:
- TapiConnectivity: ResilienceConstraint, waitToRevertTime, from simple
integer (minutes) to more generic TimePeriod.
- TapiDigitalOtn: removed object key from codirectional of OduMip.
- TapiPhotonic: firstOfChain boolean added to Amplification.
- TapiPhotonic: added new PhotonicLayerQualifier OS_MEDIA (e.g. for
Transponder line ports and ROADM add/drop ports).
- TapiPhotonic: comments enhanced.
- TapiPhotonic: OtsiaCsepTtpSpec renamed as
OtsiaConnectivityServiceEndPointSpec, OtsiConfig as OtsiConfigPac.
- TapiPhotonic: PowerManagementConfigPac , intendedMaximumOutputPower to
maxOutputPower and expected same.
- TapiPhotonic: PowerManagementCapabilityPac, maximum and minimum to max
and min.
- TapiPhotonic: OtsiPowerConfig renamed as OtsiThresholdPowerConfig,
deleted transmitPower and rxTotalPower, replaced by the composition of
PowerManagementConfigPac.
- TapiPhotonic: added McGridConfigPac and OtsiMcGridConfigPac (N, M
notation)

--- a/OAS/tapi-connectivity.yaml
+++ b/OAS/tapi-connectivity.yaml
@@ -2223,6 +2223,32 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connection={uuid}/switch-control={switch-control-uuid}/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connection"
+        required: true
+        type: "string"
+      - name: "switch-control-uuid"
+        in: "path"
+        description: "Id of switch-control"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connection={uuid}/switch-control={switch-control-uuid}/name={value-name}/
   : get:
       tags:
@@ -8302,6 +8328,97 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/resilience-constraint/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
+    post:
+      tags:
+      - "tapi-connectivity"
+      summary: "creates tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.TimePeriod.body-param"
+        description: "tapi.common.TimePeriod to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-connectivity"
+      summary: "creates or updates tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.TimePeriod.body-param"
+        description: "tapi.common.TimePeriod to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-connectivity"
+      summary: "removes tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/routing-constraint:
     get:
       tags:
@@ -12415,6 +12532,32 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connection/switch-control={switch-control-uuid}/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "switch-control-uuid"
+        in: "path"
+        description: "Id of switch-control"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connection/switch-control={switch-control-uuid}/name={value-name}/
   : get:
       tags:
@@ -14611,6 +14754,27 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connectivity-service/resilience-constraint/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connectivity-service/routing-constraint/
   : get:
       tags:
@@ -15942,6 +16106,27 @@ paths:
           description: "tapi.common.NameAndValue"
           schema:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:switch-control/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:switch-control/name={value-name}/
@@ -33520,6 +33705,20 @@ definitions:
     - "TERMINATED_BIDIRECTIONAL"
     - "PERMANENTLY_TERMINATED"
     - "TERMINATION_STATE_UNKNOWN"
+  tapi.common.TimePeriod:
+    type: "object"
+    properties:
+      value:
+        type: "integer"
+        format: "int32"
+        description: "The specific value of the time period."
+      unit:
+        description: "The unit of measurement of the time period."
+        $ref: "#/definitions/tapi.common.TimeUnit"
+  tapi.common.TimePeriodWrapper:
+    properties:
+      wait-to-revert-time:
+        $ref: "#/definitions/tapi.common.TimePeriod"
   tapi.common.TimeRange:
     type: "object"
     properties:
@@ -33533,6 +33732,19 @@ definitions:
     properties:
       schedule:
         $ref: "#/definitions/tapi.common.TimeRange"
+  tapi.common.TimeUnit:
+    type: "string"
+    enum:
+    - "YEARS"
+    - "MONTHS"
+    - "DAYS"
+    - "HOURS"
+    - "MINUTES"
+    - "SECONDS"
+    - "MILLISECONDS"
+    - "MICROSECONDS"
+    - "NANOSECONDS"
+    - "PICOSECONDS"
   tapi.common.TransmissionCapabilityProfile:
     type: "object"
     properties:
@@ -34287,12 +34499,10 @@ definitions:
           \ declaration of signal degrade or signal fail, and the initialization of\
           \ the protection/restoration switching algorithm."
       wait-to-revert-time:
-        type: "integer"
-        format: "int32"
         description: "If the protection/restoration scheme is revertive, this attribute\
-          \ specifies the time, in minutes, to wait after a fault clears on a higher\
-          \ priority (preferred) resource before reverting to the preferred resource."
-        default: 15
+          \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+          \ resource before reverting to the preferred resource."
+        $ref: "#/definitions/tapi.common.TimePeriod"
       set-up-priority:
         type: "integer"
         format: "int32"
