--- a/OAS/tapi-digital-otn.yaml
+++ b/OAS/tapi-digital-otn.yaml
@@ -2287,6 +2287,32 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connection={uuid}/switch-control={switch-control-uuid}/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connection"
+        required: true
+        type: "string"
+      - name: "switch-control-uuid"
+        in: "path"
+        description: "Id of switch-control"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connection={uuid}/switch-control={switch-control-uuid}/name={value-name}/
   : get:
       tags:
@@ -13134,6 +13160,97 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/resilience-constraint/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
+    post:
+      tags:
+      - "tapi-connectivity"
+      summary: "creates tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.TimePeriod.body-param"
+        description: "tapi.common.TimePeriod to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-connectivity"
+      summary: "creates or updates tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.TimePeriod.body-param"
+        description: "tapi.common.TimePeriod to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-connectivity"
+      summary: "removes tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/routing-constraint:
     get:
       tags:
@@ -17247,6 +17364,32 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connection/switch-control={switch-control-uuid}/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "switch-control-uuid"
+        in: "path"
+        description: "Id of switch-control"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connection/switch-control={switch-control-uuid}/name={value-name}/
   : get:
       tags:
@@ -19443,6 +19586,27 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connectivity-service/resilience-constraint/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connectivity-service/routing-constraint/
   : get:
       tags:
@@ -20774,6 +20938,27 @@ paths:
           description: "tapi.common.NameAndValue"
           schema:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:switch-control/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:switch-control/name={value-name}/
@@ -46238,7 +46423,7 @@ paths:
             $ref: "#/definitions/tapi.digital.otn.OduCtpPacWrapper"
         400:
           description: "Internal error"
-  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/tapi-connectivity:cep-list/connection-end-point={connection-end-point-uuid}/tapi-digital-otn:odu-connection-end-point-spec/odu-ctp/odu-mip={codirectional}/
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/tapi-connectivity:cep-list/connection-end-point={connection-end-point-uuid}/tapi-digital-otn:odu-connection-end-point-spec/odu-ctp/odu-mip/
   : get:
       tags:
       - "tapi-digital-otn"
@@ -46265,11 +46450,6 @@ paths:
         description: "Id of connection-end-point"
         required: true
         type: "string"
-      - name: "codirectional"
-        in: "path"
-        description: "Id of odu-mip"
-        required: true
-        type: "boolean"
       responses:
         200:
           description: "tapi.digital.otn.OduMip"
@@ -46277,7 +46457,7 @@ paths:
             $ref: "#/definitions/tapi.digital.otn.OduMipWrapper"
         400:
           description: "Internal error"
-  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/tapi-connectivity:cep-list/connection-end-point={connection-end-point-uuid}/tapi-digital-otn:odu-connection-end-point-spec/odu-ctp/odu-mip={codirectional}/odu-mip-status/
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/tapi-connectivity:cep-list/connection-end-point={connection-end-point-uuid}/tapi-digital-otn:odu-connection-end-point-spec/odu-ctp/odu-mip/odu-mip-status/
   : get:
       tags:
       - "tapi-digital-otn"
@@ -46304,11 +46484,6 @@ paths:
         description: "Id of connection-end-point"
         required: true
         type: "string"
-      - name: "codirectional"
-        in: "path"
-        description: "Id of odu-mip"
-        required: true
-        type: "boolean"
       responses:
         200:
           description: "tapi.digital.otn.OduMipStatus"
@@ -46316,7 +46491,7 @@ paths:
             $ref: "#/definitions/tapi.digital.otn.OduMipStatusWrapper"
         400:
           description: "Internal error"
-  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/tapi-connectivity:cep-list/connection-end-point={connection-end-point-uuid}/tapi-digital-otn:odu-connection-end-point-spec/odu-ctp/odu-mip={codirectional}/otn-oam-common/
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/tapi-connectivity:cep-list/connection-end-point={connection-end-point-uuid}/tapi-digital-otn:odu-connection-end-point-spec/odu-ctp/odu-mip/otn-oam-common/
   : get:
       tags:
       - "tapi-digital-otn"
@@ -46343,11 +46518,6 @@ paths:
         description: "Id of connection-end-point"
         required: true
         type: "string"
-      - name: "codirectional"
-        in: "path"
-        description: "Id of odu-mip"
-        required: true
-        type: "boolean"
       responses:
         200:
           description: "tapi.digital.otn.OtnOamCommon"
@@ -46355,7 +46525,7 @@ paths:
             $ref: "#/definitions/tapi.digital.otn.OtnOamCommonWrapper"
         400:
           description: "Internal error"
-  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/tapi-connectivity:cep-list/connection-end-point={connection-end-point-uuid}/tapi-digital-otn:odu-connection-end-point-spec/odu-ctp/odu-mip={codirectional}/otn-oam-common/deg-thr/
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/tapi-connectivity:cep-list/connection-end-point={connection-end-point-uuid}/tapi-digital-otn:odu-connection-end-point-spec/odu-ctp/odu-mip/otn-oam-common/deg-thr/
   : get:
       tags:
       - "tapi-digital-otn"
@@ -46389,11 +46559,6 @@ paths:
         description: "Id of connection-end-point"
         required: true
         type: "string"
-      - name: "codirectional"
-        in: "path"
-        description: "Id of odu-mip"
-        required: true
-        type: "boolean"
       responses:
         200:
           description: "tapi.digital.otn.DegThr"
@@ -48641,7 +48806,7 @@ definitions:
         $ref: "#/definitions/tapi.common.TimeUnit"
   tapi.common.TimePeriodWrapper:
     properties:
-      granularity-period:
+      wait-to-revert-time:
         $ref: "#/definitions/tapi.common.TimePeriod"
   tapi.common.TimeRange:
     type: "object"
@@ -49411,12 +49576,10 @@ definitions:
           \ declaration of signal degrade or signal fail, and the initialization of\
           \ the protection/restoration switching algorithm."
       wait-to-revert-time:
-        type: "integer"
-        format: "int32"
         description: "If the protection/restoration scheme is revertive, this attribute\
-          \ specifies the time, in minutes, to wait after a fault clears on a higher\
-          \ priority (preferred) resource before reverting to the preferred resource."
-        default: 15
+          \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+          \ resource before reverting to the preferred resource."
+        $ref: "#/definitions/tapi.common.TimePeriod"
       set-up-priority:
         type: "integer"
         format: "int32"
