--- a/OAS/tapi-eth.yaml
+++ b/OAS/tapi-eth.yaml
@@ -2356,6 +2356,32 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connection={uuid}/switch-control={switch-control-uuid}/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connection"
+        required: true
+        type: "string"
+      - name: "switch-control-uuid"
+        in: "path"
+        description: "Id of switch-control"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connection={uuid}/switch-control={switch-control-uuid}/name={value-name}/
   : get:
       tags:
@@ -11451,6 +11477,97 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/resilience-constraint/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
+    post:
+      tags:
+      - "tapi-connectivity"
+      summary: "creates tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.TimePeriod.body-param"
+        description: "tapi.common.TimePeriod to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-connectivity"
+      summary: "creates or updates tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.TimePeriod.body-param"
+        description: "tapi.common.TimePeriod to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-connectivity"
+      summary: "removes tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/routing-constraint:
     get:
       tags:
@@ -15647,6 +15764,32 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connection/switch-control={switch-control-uuid}/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "switch-control-uuid"
+        in: "path"
+        description: "Id of switch-control"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connection/switch-control={switch-control-uuid}/name={value-name}/
   : get:
       tags:
@@ -17843,6 +17986,27 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connectivity-service/resilience-constraint/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:connectivity-service/routing-constraint/
   : get:
       tags:
@@ -19174,6 +19338,27 @@ paths:
           description: "tapi.common.NameAndValue"
           schema:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:switch-control/control-parameters/wait-to-revert-time/
+  : get:
+      tags:
+      - "tapi-connectivity"
+      summary: "returns tapi.common.TimePeriod"
+      description: "If the protection/restoration scheme is revertive, this attribute\
+        \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+        \ resource before reverting to the preferred resource."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-connectivity:switch-control/name={value-name}/
@@ -48261,7 +48446,7 @@ definitions:
         $ref: "#/definitions/tapi.common.TimeUnit"
   tapi.common.TimePeriodWrapper:
     properties:
-      granularity-period:
+      wait-to-revert-time:
         $ref: "#/definitions/tapi.common.TimePeriod"
   tapi.common.TimeRange:
     type: "object"
@@ -49026,12 +49211,10 @@ definitions:
           \ declaration of signal degrade or signal fail, and the initialization of\
           \ the protection/restoration switching algorithm."
       wait-to-revert-time:
-        type: "integer"
-        format: "int32"
         description: "If the protection/restoration scheme is revertive, this attribute\
-          \ specifies the time, in minutes, to wait after a fault clears on a higher\
-          \ priority (preferred) resource before reverting to the preferred resource."
-        default: 15
+          \ specifies the time to wait after a fault clears on a higher priority (preferred)\
+          \ resource before reverting to the preferred resource."
+        $ref: "#/definitions/tapi.common.TimePeriod"
       set-up-priority:
         type: "integer"
         format: "int32"
