--- a/OAS/tapi-dsr.yaml
+++ b/OAS/tapi-dsr.yaml
@@ -45445,6 +45445,7 @@ definitions:
           type: "string"
           description: "The state of the stream.\r\n                CONDITION: Mandatory\
             \ where stream state is not ALWAYS default."
+          default: "STREAM_STATE_ACTIVE"
         connection-protocol:
           type: "string"
           description: "Names the connection protocol for this particular available\
@@ -45452,6 +45453,7 @@ definitions:
             \ list of connection protocols identified in the referenced SupportedStreamType.\r\
             \n                CONDITION: Mandatory where not default and multiple\
             \ options offered in the supported stream type."
+          default: "CONNECTION_PROTOCOL_WEBSOCKETS"
         supported-stream-type:
           description: "Identifies the type of stream that is available for connection."
           $ref: "#/definitions/tapi.streaming.SupportedStreamTypeRef"
@@ -45555,6 +45557,7 @@ definitions:
         type: "string"
         description: "The encoding format of the streamed records.\r\n           \
           \     CONDITION: Mandatory where not default."
+        default: "ENCODING_FORMAT_JSON"
   tapi.streaming.ConnectionProtocolDetailsWrapper:
     properties:
       connection-protocol-details:
@@ -45607,17 +45610,20 @@ definitions:
         description: "Indicates whether records are suppressed and if so, what the\
           \ suppression strategy is.\r\n                CONDITION: Mandatory where\
           \ not default."
+        default: "RECORD_SUPPRESSION_NO_SUPPRESSION"
       allowed-dither-from-value-expectation:
         type: "string"
         description: "Defines the dither in an expected value that is allowed for\
           \ the value to still be considered as expected.\r\n                CONDITION:\
           \ Mandatory where not default."
+        default: "VALUE_EXPECTATION_DITHER_NO_DITHER"
       value-expectation:
         type: "string"
         description: "Where there is record suppression this indicates what the relevant\
           \ expected value is.\r\n                If the value is as expected the\
           \ record will be suppressed.\r\n                CONDITION: Mandatory where\
           \ not default."
+        default: "VALUE_EXPECTATION_NO_EXPECTATION"
   tapi.streaming.InformationRecordStrategyWrapper:
     properties:
       information-record-strategy:
@@ -45685,6 +45691,7 @@ definitions:
           type: "string"
           description: "Defines the trigger to log a record.\r\n                CONDITION:\
             \ Mandatory where not default."
+          default: "RECORD_TRIGGER_ON_CHANGE"
         segment-size:
           type: "string"
           description: "Size of sub-structuring of the log.\r\n                CONDITION:\
